# sectionise

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sectionise/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
